--- a/gRPC/MovementStimApp/Stim_ControlWindow.xaml
+++ b/gRPC/MovementStimApp/Stim_ControlWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MovementStimAPP.Stim_ControlWindow"
+<Window x:Class="MovementStimAPP.Stim_ControlWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,15 +8,24 @@
         mc:Ignorable="d"
         Title="ControlWindow" Height="900" Width="1500" Loaded="ControlWindow_Loaded" Closed="ControlWindow_Closed">
     <Grid>
-        <Button Name="btn_connect" Content="Connect EMG" Click="btn_connect_Click" IsEnabled="False"
-        HorizontalAlignment="Left" Height="41" Margin="32,47,0,0" VerticalAlignment="Top" Width="111"/>
-        <Button Name="btn_start" Content="Start Streaming" Click="btn_start_Click" IsEnabled="False"
-        HorizontalAlignment="Left" Height="41" Margin="165,47,0,0" VerticalAlignment="Top" Width="112"/>
+        <Button x:Name="btn_emgConfigLoad" Click="btn_emgConfigLoad_Click" Content="Load EMG Config File" HorizontalAlignment="Left" Height="34" Margin="31,26,0,0" VerticalAlignment="Top" Width="178"/>
+        <TextBlock HorizontalAlignment="Left" Height="18" Margin="242,15,0,0" TextWrapping="Wrap" Text="Select Participant ID" VerticalAlignment="Top" Width="154" TextAlignment="Center"/>
+        <ComboBox x:Name="partSelect" ItemsSource="{Binding Path=participantList}" SelectionChanged="part_SelectionChanged" HorizontalAlignment="Left" Height="25
+          " Margin="230,33,0,0" VerticalAlignment="Top" Width="178" IsEnabled="False">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding ID}" />
+                    </StackPanel>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+        <Button Name="btn_connect" Content="Connect EMG" Click="btn_connect_Click" IsEnabled="False" HorizontalAlignment="Left" Height="41" Margin="917,35,0,0" VerticalAlignment="Top" Width="111"/>
+        <Button Name="btn_start" Content="Start Streaming" Click="btn_start_Click" IsEnabled="False" HorizontalAlignment="Left" Height="41" Margin="1053,43,0,0" VerticalAlignment="Top" Width="112"/>
 
-
-        <TextBox Name="saveDir_textbox" TextChanged="directory_textChanged" HorizontalAlignment="Left" Height="26" Margin="353,84,0,0" TextWrapping="Wrap" Text="C:\" VerticalAlignment="Top" Width="210" />
+        <TextBox Name="saveDir_textbox" TextChanged="directory_textChanged" HorizontalAlignment="Left" Height="26" Margin="512,79,0,0" TextWrapping="Wrap" Text="C:\" VerticalAlignment="Top" Width="210" />
         <Button Name="btn_saveDirProvided" Content="OK!" Click="btn_saveDir_Click" IsEnabled="True"
-                HorizontalAlignment="Left" Margin="568,90,0,0" VerticalAlignment="Top"/>
+                HorizontalAlignment="Left" Margin="727,85,0,0" VerticalAlignment="Top"/>
 
         <!--WindowsFormsHost x:Name="RawEMGForm" Margin="32,200,750,10" Grid.Row="0" Grid.ColumnSpan="2">
             <winformchart:Chart x:Name="EMGStreamChart" Dock="Fill">
@@ -80,14 +89,14 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        <Button x:Name="btn_load" Content="Load Calibration Data" Click="btn_load_Click" HorizontalAlignment="Left" Height="24" Margin="353,44,0,0" VerticalAlignment="Top" Width="210"/>
-        <TextBox x:Name="percentThresh_textbox"  Text="" HorizontalAlignment="Left" Height="29" Margin="32,100,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="56"/>
-        <Button x:Name="btn_threshSave" Click ="btn_thresh_Click" Content="Save Percent Threshold" HorizontalAlignment="Left" Height="29" Margin="119,100,0,0" VerticalAlignment="Top" Width="158"/>
-        <Button x:Name="btn_startStim" Content="Start Stimulation" Click="btn_startStim_Click" HorizontalAlignment="Left" Height="36" Margin="32,140,0,0" VerticalAlignment="Top" Width="111"/>
-        <Button x:Name="btn_stopStim" Content="Stop Stimulation" Click="btn_stopStim_Click" HorizontalAlignment="Left" Height="36" Margin="166,140,0,0" VerticalAlignment="Top" Width="111"/>
+        <Button x:Name="btn_load" Content="Load Calibration Data" Click="btn_load_Click" HorizontalAlignment="Left" Height="24" Margin="472,26,0,0" VerticalAlignment="Top" Width="210"/>
+        <TextBox x:Name="percentThresh_textbox"  Text="" HorizontalAlignment="Left" Height="29" Margin="626,140,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="56"/>
+        <Button x:Name="btn_threshSave" Click ="btn_thresh_Click" Content="Save Percent Threshold" HorizontalAlignment="Left" Height="29" Margin="718,139,0,0" VerticalAlignment="Top" Width="158"/>
+        <Button x:Name="btn_startStim" Content="Start Stimulation" Click="btn_startStim_Click" HorizontalAlignment="Left" Height="36" Margin="1054,122,0,0" VerticalAlignment="Top" Width="111"/>
+        <Button x:Name="btn_stopStim" Content="Stop Stimulation" Click="btn_stopStim_Click" HorizontalAlignment="Left" Height="36" Margin="917,106,0,0" VerticalAlignment="Top" Width="111"/>
         <CheckBox x:Name="calibration_checkbox" Content="Calibration" Checked="calibration_Checked" Unchecked="calibration_Unchecked" HorizontalAlignment="Left" Height="32" Margin="806,68,0,0" VerticalAlignment="Top" Width="87"/>
         <!--Button x:Name="btn_emgConfigLoad" Click="btn_emgConfigLoad_Click" Content="Load EMG Config File" HorizontalAlignment="Left" Height="32" Margin="633,36,0,0" VerticalAlignment="Top" Width="106"/-->
-        <Button x:Name="btn_bicConfigLoad" Click="btn_bicConfigLoad_Click" Content="Load BIC Config File" HorizontalAlignment="Left" Height="24" Margin="607,44,0,0" VerticalAlignment="Top" Width="149"/>
+        <Button x:Name="btn_bicConfigLoad" Click="btn_bicConfigLoad_Click" Content="Load BIC Config File" HorizontalAlignment="Left" Height="24" Margin="718,26,0,0" VerticalAlignment="Top" Width="149"/>
 
     </Grid>
 </Window>
